--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.5.0</version>
-        <type>pom</type>
+        <!-- <type>pom</type> -->
     </parent>
 
     <dependencies>
